2004-11-23  Marco Pesenti Gritti  <marco@gnome.org>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_application_launch_with_env),
	(expand_macro_single), (expand_macro),
	(expand_application_parameters), (print_expansion_data),
	(print_macro_expansion), (test_exec_array),
	(test_exec_macro_expansion):
	* test/test-mime-handlers.c: (main):

	Improve expand_application_parameters. Now it handles
	--open-uri=%u correctly. Add tests for macro expansion.

2004-11-22  Marco Pesenti Gritti  <marco@gnome.org>

	* .cvsignore:
	* doc/tmpl/gnome-vfs-file-size.sgml:
	* doc/tmpl/gnome-vfs-mime-database-deprecated.sgml:
	* doc/tmpl/gnome-vfs-mime-database.sgml:
	* doc/tmpl/gnome-vfs-resolve.sgml:
	* imported/.cvsignore:
	* imported/neon/.cvsignore:
	* libgnomevfs/.cvsignore:
	* test/.cvsignore:

	Update

	* libgnomevfs/eggdesktopentries.c:
	* libgnomevfs/eggdesktopentries.h:
	* libgnomevfs/eggdirfuncs.c:
	* libgnomevfs/eggdirfuncs.h:

	Remove, they are not used anymore.

2004-11-22  Marco Pesenti Gritti  <marco@gnome.org>

	* doc/Makefile.am:

	Recognize deprecated apis

	* doc/gnome-vfs-2.0-docs.sgml:
	* doc/gnome-vfs-2.0-sections.txt:

	Move the mime deprecated api to a separate document
	for clarity.

	* doc/tmpl/gnome-vfs-application-registry.sgml:
	* doc/tmpl/gnome-vfs-file-size.sgml:
	* doc/tmpl/gnome-vfs-mime-database.sgml:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-application-registry.h:

	Fully deprecate.

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_application),
	(gnome_vfs_mime_application_copy),
	(gnome_vfs_mime_application_free),
	(gnome_vfs_mime_application_new_from_id),
	(gnome_vfs_mime_action_launch_with_env),
	(gnome_vfs_mime_application_launch_with_env),
	(expand_application_parameters), (expand_component_parameters),
	(copy_str_list), (guess_deprecated_fields_from_exec),
	(gnome_vfs_mime_application_new_from_desktop_id),
	(gnome_vfs_mime_get_default_application_for_uri),